--- a/public/styles.css
+++ b/public/styles.css
@@ -25,7 +25,7 @@ body {
 
 #potato {
   font-size: 50px;
-  position: absolute;
-  transition: all 1s ease-in-out;
+  position: absolute; /* important for fly animation */
+  transition: transform 1s ease-in-out; /* smooth movement */
   pointer-events: none;
 }
