--- a/public/styles.css
+++ b/public/styles.css
@@ -8,6 +8,7 @@ body {
   width: 100%;
   height: 200px;
   margin: 20px auto;
+  border: 1px solid #ccc;
 }
 
 .player {
@@ -18,7 +19,7 @@ body {
   display: flex;
   justify-content: center;
   align-items: center;
-  font-size: 24px;
+  position: absolute;
 }
 
 #potato {
