--- a/public/styles.css
+++ b/public/styles.css
@@ -1,8 +1,3 @@
-body {
-  text-align: center;
-  font-family: sans-serif;
-}
-
 #playersContainer {
   position: relative;
   width: 100%;
@@ -20,6 +15,7 @@ body {
   justify-content: center;
   align-items: center;
   position: absolute;
+  font-size: 24px;
 }
 
 #potato {
