--- a/public/styles.css
+++ b/public/styles.css
@@ -14,7 +14,7 @@ body {
 
 #potato {
   position: absolute;
-  width: 60px;
+  font-size: 48px;
   left: 120px;
   top: 70px;
 }
@@ -39,3 +39,4 @@ button {
   padding: 10px 20px;
   font-size: 16px;
 }
+
