--- a/public/styles.css
+++ b/public/styles.css
@@ -17,6 +17,8 @@ body {
   font-size: 48px;
   left: 120px;
   top: 70px;
+  user-select: none;
+  pointer-events: none;
 }
 
 .fly {
@@ -39,4 +41,5 @@ button {
   padding: 10px 20px;
   font-size: 16px;
 }
+
 
